[gd_scene load_steps=6 format=3 uid="uid://dl2ed4gkybggf"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_ffboj"]
[ext_resource type="PackedScene" uid="uid://84xfupcwvo8l" path="res://prefabs/remote.tscn" id="2_8h0rr"]
[ext_resource type="Texture2D" uid="uid://8ggihh27mlrr" path="res://sprites/blob_shadow.png" id="2_b0fo8"]
[ext_resource type="AudioStream" uid="uid://cydjn1ct3hps2" path="res://sounds/walking.ogg" id="5_ics1s"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_gdq8c"]
radius = 0.3
height = 1.0

[node name="player" type="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
script = ExtResource("1_ffboj")

[node name="collider" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.55, 0)
shape = SubResource("CapsuleShape3D_gdq8c")

[node name="head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="camera" type="Camera3D" parent="head"]
cull_mask = 1048561
current = true
fov = 80.0

[node name="sub_viewport_container" type="SubViewportContainer" parent="head/camera"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="sub_viewport" type="SubViewport" parent="head/camera/sub_viewport_container"]
transparent_bg = true
handle_input_locally = false
msaa_3d = 1
canvas_cull_mask = 4294966274
size = Vector2i(1280, 720)
render_target_update_mode = 4

[node name="camera" type="Camera3D" parent="head/camera/sub_viewport_container/sub_viewport"]
cull_mask = 1047554
fov = 40.0

[node name="not_active_point" type="Node3D" parent="head/camera/sub_viewport_container/sub_viewport/camera"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.10501, -0.793442, -2.75)

[node name="active_point" type="Node3D" parent="head/camera/sub_viewport_container/sub_viewport/camera"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2.75)

[node name="active_point_deactivating" type="Node3D" parent="head/camera/sub_viewport_container/sub_viewport/camera"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2.48597)

[node name="remote" parent="head/camera/sub_viewport_container/sub_viewport/camera" instance=ExtResource("2_8h0rr")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.31013, -0.377568, -2.42658)

[node name="forward" type="RayCast3D" parent="head/camera"]
exclude_parent = false
target_position = Vector3(0, 0, -3)
collide_with_areas = true

[node name="shadow" type="Decal" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.9, 0)
size = Vector3(1, 2, 1)
texture_albedo = ExtResource("2_b0fo8")
modulate = Color(1, 1, 1, 0.705882)
normal_fade = 0.5

[node name="footsteps" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_ics1s")
volume_db = -5.0
autoplay = true

[node name="cooldown" type="Timer" parent="."]
one_shot = true
